initialized firebase database and createWithEmailAndPassword

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Aestimo</title>
+		<title>Aestimogram</title>
 	</head>
 	<body>
 		<div id="root"></div>
