--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link
 			rel="icon"
 			type="image/png"
-			href="/film-roll.png"
+			href="/src/assets/film-roll.png"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
